--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,13 +21,28 @@ android {
             jniLibs.srcDirs=['libs']
         }
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a','x86_64'
+            universalApk true
+        }
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:+'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation files('libs/gson-2.8.0.jar')
+    implementation files('libs/okhttp-3.3.1.jar')
+    implementation files('libs/okio-1.8.0.jar')
+    implementation files('libs/TingPhoneOpenSDK_6.1.6.jar')
+    implementation files('libs/XmDownload_1.6.jar')
+    implementation files('libs/XmlyOAuth2SDK_V1.8.jar')
 }
